--- a/index.html
+++ b/index.html
@@ -35,40 +35,40 @@
 		</header>
 		<div class="container-fluid">
 			<!-- Timeblocks go here -->
-			<div class="row align-items-start">
-				<section class="col-2 border border-dark">
+			<div class="row align-items-end" data-id="0700">
+				<div class="col-2 border border-dark">
 					<h2>7:00</h2>
-				</section>
-				<section class="col-8 col-sx-4 border border-dark">
+				</div>
+				<div class="col-8 col-sx-4 border border-dark">
                         <p>this is where the events go once saved !</p>
 						<div class="form-group">
-							<label for="exampleFormControlTextarea1"
+							<label for="event_input"
 								></label>
 							<textarea
 								class="form-control"
-								id="exampleFormControlTextarea1"
+								id="event_input" 
 								rows="1"
 							></textarea>
 						</div>
-				</section>
-				<section class="col-2 border border-dark">
-					<button type="button" class="btn btn-dark">
+				</div>
+				<div class="col-2 border border-dark">
+					<button type="button" class="btn btn-dark" data-id="0700" id="save_button">
 						SAVE
 					</button>
-				</section>
+				</div>
 			</div>
-            <div class="row align-items-start">
+            <div class="row align-items-center">
 				<section class="col-2 border border-dark">
 					<h2>8:00</h2>
 				</section>
 				<section class="col-8 col-sx-4 border border-dark">
                         <p>this is where the events go once saved !</p>
 						<div class="form-group">
-							<label for="exampleFormControlTextarea1"
+							<label for="event_input"
 								></label>
 							<textarea
 								class="form-control"
-								id="exampleFormControlTextarea1"
+								id="event_input"
 								rows="1"
 							></textarea>
 						</div>
