added 24 hour clock and justify strech for the rows

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 		</header>
 		<div class="container-fluid">
 			<!-- Timeblocks go here -->
-			<div class="row align-items-end" data-id="0700">
+			<div class="row align-items-strech" data-id="0700">
 				<div class="col-2 border border-dark">
 					<h2>7:00</h2>
 				</div>
 				<div class="col-8 col-sx-4 border border-dark">
-                        <p>this is where the events go once saved !</p>
+                        <p><span id="display">this is where the events go once saved !</span></p>
 						<div class="form-group">
 							<label for="event_input"
 								></label>
@@ -57,7 +57,7 @@
 					</button>
 				</div>
 			</div>
-            <div class="row align-items-center">
+            <div class="row align-items-strech">
 				<section class="col-2 border border-dark">
 					<h2>8:00</h2>
 				</section>
