--- a/index.html
+++ b/index.html
@@ -31,54 +31,54 @@
 			<p class="lead">
 				A simple calendar app for scheduling your work day
 			</p>
-			<p id="currentDay" class="lead"></p>
+			<h3 id="currentDay" class="lead"></h3>
 		</header>
-		<div class="container">
+		<div class="container-fluid">
 			<!-- Timeblocks go here -->
             <div class="row time-block" id="9">
                 <h2 class="col-2 hour">9:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2"> <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>Save</button>
             </div>
             <div class="row time-block" id="10">
                 <h2 class="col-2 hour">10:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="11">
                 <h2 class="col-2 hour">11:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="12">
                 <h2 class="col-2 hour">12:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="13">
                 <h2 class="col-2 hour">13:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="14">
                 <h2 class="col-2 hour">14:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="15">
                 <h2 class="col-2 hour">15:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
-            <div class="row time-block" id="16">
+            <div class="row time-block" id="20">
                 <h2 class="col-2 hour">16:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
-            <div class="row time-block" id="17">
+            <div class="row time-block" id="21">
                 <h2 class="col-2 hour">17:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark">Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
