improved colour scheme contrast

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 			<p class="lead">
 				A simple calendar app for scheduling your work day
 			</p>
-			<h3 id="currentDay" class="lead"></h3>
+			<p id="currentDay" class="lead"></p>
 		</header>
 		<div class="container-fluid">
 			<!-- Timeblocks go here -->
             <div class="row time-block" id="9">
                 <h2 class="col-2 hour">9:00</h2>
                 <textarea class="col-8 description"></textarea>
-                <button class="saveBtn btn-dark col-2"> <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>Save</button>
+                <button class="saveBtn btn-dark col-2">Save</button>
             </div>
             <div class="row time-block" id="10">
                 <h2 class="col-2 hour">10:00</h2>
